Is add tags meta description, keyworks and author. Is modified href logo and option start

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Miller Fabian Rodriguez Paez">
+    <meta name="description" content="Portafolio Web Developer Miller Fabian Rodriguez Paez - Miller Fabian Rodriguez Paez Web">
+    <meta name="keywords"
+        content="miller rodriguez, miller rodriguez web, millerrodriguezweb.com.co, portafolio web, desarrollador web, ingeniero de sistemas, web developer">
     <link rel="icon" type="image/svg+xml" href="img/favicon.svg" sizes="any">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!--Customs fontAwesome-->
@@ -20,7 +24,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="https://millerrodriguezweb.com.co">
                 <h1>MR WEB</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -31,7 +35,7 @@
             <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
                         <a data-scroll class="nav-link" href="#skills">SKILLS</a>
@@ -43,7 +47,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a data-scroll class="dropdown-item" href="#last-projects">ULTIMOS PROYECTOS</a></li>
-                            <li><a class="dropdown-item" href="#">TODOS LOS PROYECTOS</a></li>
+                            <li><a class="dropdown-item" href="all-projects.html">TODOS LOS PROYECTOS</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -76,7 +80,8 @@
         </div>
         <div class="social-media">
             <ul>
-                <li><a class="fab fa-facebook-square" target="_blank" href="https://web.facebook.com/mfrodriguezp"></a></li>
+                <li><a class="fab fa-facebook-square" target="_blank" href="https://web.facebook.com/mfrodriguezp"></a>
+                </li>
                 <li><a class="fab fa-twitter-square" target="_blank" href="https://twitter.com/mfrodriguezp94"></a></li>
                 <li><a class="fab fa-linkedin" target="_blank" href="https://www.linkedin.com/in/mfrodriguezp"></a></li>
                 <li><a class="fab fa-github-square" target="_blank" href="https://github.com/Mfrodriguezp"></a></li>
@@ -383,7 +388,7 @@
                 <div class="form">
                     <form>
                         <div class="alert alert-success alert-dismissible d-none fade mb-3" role="alert" id="success">
-                            
+
                         </div>
                         <div class="alert alert-danger alert-dismissible d-none fade mb-3" role="alert" id="error">
                         </div>
@@ -413,9 +418,12 @@
             </div>
             <div class="social-media-footer col-md-12">
                 <ul>
-                    <li><a class="fab fa-facebook-square" target="_blank" href="https://web.facebook.com/mfrodriguezp"></a></li>
-                    <li><a class="fab fa-twitter-square" target="_blank" href="https://twitter.com/mfrodriguezp94"></a></li>
-                    <li><a class="fab fa-linkedin" target="_blank" href="https://www.linkedin.com/in/mfrodriguezp"></a></li>
+                    <li><a class="fab fa-facebook-square" target="_blank"
+                            href="https://web.facebook.com/mfrodriguezp"></a></li>
+                    <li><a class="fab fa-twitter-square" target="_blank" href="https://twitter.com/mfrodriguezp94"></a>
+                    </li>
+                    <li><a class="fab fa-linkedin" target="_blank" href="https://www.linkedin.com/in/mfrodriguezp"></a>
+                    </li>
                     <li><a class="fab fa-github-square" target="_blank" href="https://github.com/Mfrodriguezp"></a></li>
                 </ul>
             </div>
@@ -431,4 +439,5 @@
     <script src="js/efectoScroll.js"></script>
     <script src="contactForm/contactForm.js"></script>
 </body>
+
 </html>
