is modified section skills

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         PHP
                     </div>
                 </div>
-                <div class="skill col-6 col-md-2 text-center">
+                <div class="d-none skill col-6 col-md-2 text-center">
                     <div class="imgSkill">
                         <img src="img/logos/logoNodeJs.svg" alt="">
                     </div>
@@ -161,7 +161,7 @@
                         Node JS
                     </div>
                 </div>
-                <div class="skill col-6 col-md-2 text-center">
+                <div class="d-none skill col-6 col-md-2 text-center">
                     <div class="imgSkill">
                         <img src="img/logos/logoGo.svg" alt="">
                     </div>
@@ -169,7 +169,7 @@
                         GO
                     </div>
                 </div>
-                <div class="skill col-6 col-md-2 text-center">
+                <div class="d-none skill col-6 col-md-2 text-center">
                     <div class="imgSkill">
                         <img src="img/logos/logoPython.svg" alt="">
                     </div>
@@ -196,7 +196,7 @@
                         Jquery
                     </div>
                 </div>
-                <div class="skill col-6 col-md-2 text-center">
+                <div class="d-none skill col-6 col-md-2 text-center">
                     <div class="imgSkill">
                         <img src="img/logos/logoAngular.svg" alt="">
                     </div>
@@ -204,7 +204,7 @@
                         Angular
                     </div>
                 </div>
-                <div class="skill col-6 col-md-2 text-center">
+                <div class="d-none skill col-6 col-md-2 text-center">
                     <div class="imgSkill">
                         <img src="img/logos/logoReact.svg" alt="">
                     </div>
@@ -212,7 +212,7 @@
                         React
                     </div>
                 </div>
-                <div class="skill col-6 col-md-2 text-center">
+                <div class="d-none skill col-6 col-md-2 text-center">
                     <div class="imgSkill">
                         <img src="img/logos/logoLaravel.svg" alt="">
                     </div>
@@ -220,7 +220,7 @@
                         Laravel
                     </div>
                 </div>
-                <div class="skill col-6 col-md-2 text-center">
+                <div class="d-none skill col-6 col-md-2 text-center">
                     <div class="imgSkill">
                         <img src="img/logos/logoSymfony.svg" alt="">
                     </div>
@@ -306,7 +306,7 @@
                         MongoDB
                     </div>
                 </div>
-                <div class="skill col-6 col-md-2 text-center">
+                <div class="d-none skill col-6 col-md-2 text-center">
                     <div class="imgSkill">
                         <img src="img/logos/logoRedis.svg" alt="">
                     </div>
