is modified links in navbar

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <section id="skills" class="skills py-4">
             <h3 class="text-center">SKILLS</h3>
             <div class="container row m-auto">
-                <h4 class="col-md-12">
+                <h4 class="col-md-12 my-4">
                     Leguajes
                 </h4>
                 <div class="skill col-6 col-md-2 text-center">
@@ -177,7 +177,7 @@
                         Python
                     </div>
                 </div>
-                <h4 class="col-md-12">
+                <h4 class="col-md-12 my-4">
                     Frameworks y librerías
                 </h4>
                 <div class="skill col-6 col-md-2 text-center">
@@ -228,7 +228,7 @@
                         Symfony
                     </div>
                 </div>
-                <h4 class="col-md-12">
+                <h4 class="col-md-12 my-4">
                     CMS
                 </h4>
                 <div class="skill col-6 col-md-2 text-center">
@@ -263,7 +263,7 @@
                         Drupal
                     </div>
                 </div>
-                <h4 class="col-md-12">
+                <h4 class="col-md-12 my-4">
                     Bases de Datos
                 </h4>
                 <div class="skill col-6 col-md-2 text-center">
@@ -322,7 +322,7 @@
                         Firebase
                     </div>
                 </div>
-                <h4 class="col-md-12">
+                <h4 class="col-md-12 my-4">
                     Pre - procesadores
                 </h4>
                 <div class="skill col-6 col-md-2 text-center">
