--- a/all-projects.html
+++ b/all-projects.html
@@ -39,7 +39,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a data-scroll class="nav-link" href="index.html#skills">PROYECTOS</a>
+                        <a data-scroll class="nav-link" href="index.html#all-projects">PROYECTOS</a>
                     </li>
                     <li class="nav-item">
                         <a data-scroll class="nav-link" href="index.html#contact-me">CONTACTO</a>
