is added Curriculum vitae and edit buttons styles

--- a/all-projects.html
+++ b/all-projects.html
@@ -36,10 +36,10 @@
             <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+                        <a class="nav-link active" aria-current="page" href="#header">INICIO</a>
                     </li>
                     <li class="nav-item">
-                        <a data-scroll class="nav-link" href="index.html#all-projects">PROYECTOS</a>
+                        <a data-scroll class="nav-link" href="#all-projects">PROYECTOS</a>
                     </li>
                     <li class="nav-item">
                         <a data-scroll class="nav-link" href="index.html#contact-me">CONTACTO</a>
@@ -318,6 +318,7 @@
     <a data-scroll href="#header" class="ir-arriba"><i class="fas fa-arrow-circle-up"></i></a>
     <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <!--SmoothScroll-->
     <script src="js/smooth-scroll.polyfills.min.js"></script>
     <script src="js/efectoScroll.js"></script>
