--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+                        <a class="nav-link active" aria-current="page" href="#header">INICIO</a>
                     </li>
                     <li class="nav-item">
                         <a data-scroll class="nav-link" href="#skills">SKILLS</a>
@@ -66,12 +66,12 @@
                     Ing. de sistemas y desarrollador web.
                 </p>
                 <div class="buttons">
-                    <button class="btn">
+                    <a href="docs/CV_MillerRodriguez.pdf" download="CV_MillerRodriguez" class="btn btn-warning">
                         Descargar CV
-                    </button>
-                    <button class="btn">
-                        <a data-scroll href="#contact-me">Contáctame</a>
-                    </button>
+                    </a>
+                    <a data-scroll href="#contact-me" class="btn btn-warning">
+                        Contáctame
+                    </a>
                 </div>
             </div>
             <div class="imgSalutation">
@@ -347,31 +347,31 @@
             <h3>Últimos Proyectos</h3>
             <div class="container py-4 m-auto owl-carousel">
                 <div class="project">
-                    <h4>Página Web VCS</h4>
+                    <h4><a href="all-projects.htmls#all-projects">Página Web VCS</a></h4>
                     <div class="img_proyecto">
                         <img src="img/proyectoVCS.png" alt="">
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Moodle VCS</h4>
+                    <h4><a href="all-projects.html#all-projects">Moodle VCS</a></h4>
                     <div class="img_proyecto">
                         <img src="img/moodle_VCS.jpg" alt="">
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Form. Adeur Medical</h4>
+                    <h4><a href="all-projects.html#all-projects">Form. Adeur Medical</a></h4>
                     <div class="img_proyecto">
                         <img src="img/formAdeurMedical.png" alt="">
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Reloj Javascript</h4>
+                    <h4><a href="all-projects.html#all-projects">Reloj Javascript</a></h4>
                     <div class="img_proyecto">
                         <img src="img/project_reloj_javascript.png" alt="">
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Form. Adeur Medical</h4>
+                    <h4><a href="all-projects.html#all-projects">Form. Adeur Medical</a></h4>
                     <div class="img_proyecto">
                         <img src="img/formAdeurMedical.png" alt="">
                     </div>
